WorkShop_2.3_Ingress_Network/ingress_webtest_tls.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingresswebtesttls
spec:
  tls:
  - hosts:
    - webtest1.kuberneteslabthailand.com
    secretName: webtest1secret
  - hosts:
    - webtest2.kuberneteslabthailand.com
    secretName: webtest2secret
  rules:
  - host: webtest1.kuberneteslabthailand.com
    http:
      paths:
      - backend:
          serviceName: webtest1
          servicePort: 80
  - host: webtest2.kuberneteslabthailand.com
    http:
      paths:
      - backend:
          serviceName: webtest2
          servicePort: 80
